syntax = "proto3";

package item_keeper;

option go_package = "item_keeper/internal/server/proto";

message Parameter {
    string name = 1;
    string value = 2;
}

message Image {
    string itemid = 1;
    string title = 2;
    bytes body = 3;
}

message Uitem {
    string id = 1;
    string name = 2;
    repeated string tags = 3;
    repeated Parameter params = 4;
    repeated Image images = 5;
    string userid = 6;
}

message RegUserRequest {
    string login = 1;
    string pass = 2;
}

message RegUserResponse {
    string userid = 1;
}

message LogUserRequest {
    string login = 1;
    string pass = 2;
}

message LogUserResponse {
    string userid = 1;
}

message AddItemRequest {
    Uitem uitem = 1;
}

message AddItemResponse {
    Uitem uitem = 1;
}

message UpdateItemRequest {
    Uitem uitem = 1;
}

message UpdateItemResponse {
    Uitem uitem = 1;
}

message DeleteItemRequest {
    string userid = 1;
    string itemid = 2;
}

message DeleteItemResponse {
}

message GetCatalogRequest {
    string userid = 1;
}

message GetCatalogResponse {
    repeated Uitem uitem = 1;
}

message PicturesRequest {
    string userid = 1;
    string itemid = 2;
}

message PicturesResponse {
    bytes Image = 1;
}

service ItemKeeper {
  rpc RegUser(RegUserRequest) returns (RegUserResponse);
  rpc LogUser(LogUserRequest) returns (LogUserResponse);
  rpc AddItem(AddItemRequest) returns (AddItemResponse);
  rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse);
  rpc GetCatalog(GetCatalogRequest) returns (GetCatalogResponse);
  rpc Pictures(PicturesRequest) returns (stream PicturesResponse);
}